// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers reducer should handle READ_CUSTOMERS_FAILURE 1`] = `
Object {
  "requestState": Object {
    "customersReadFailed": true,
    "customersReadPending": false,
    "customersReadSuccess": false,
    "error": undefined,
  },
}
`;

exports[`customers reducer should handle READ_CUSTOMERS_PENDING 1`] = `
Object {
  "requestState": Object {
    "customersReadFailed": false,
    "customersReadPending": true,
    "customersReadSuccess": false,
    "error": null,
  },
}
`;

exports[`customers reducer should handle READ_CUSTOMERS_SUCCESSFUL 1`] = `
Object {
  "customers": Array [
    "dummy data",
  ],
  "requestState": Object {
    "customersReadFailed": false,
    "customersReadPending": false,
    "customersReadSuccess": true,
    "error": null,
  },
}
`;

exports[`customers reducer should return the initial state 1`] = `Object {}`;
